# Mocker

./: Dockerfile  readme.md
.github/workflows/: rust.yml
mocker/: Cargo.toml
mocker/src/: main.rs
mocker/src/endpoints/: getters.rs  mod.rs  updaters.rs
mocker/src/message/: builders.rs  messenger.rs  mod.rs  processors.rs
